--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MADApp"
         tools:targetApi="31">
+        <activity
+            android:name=".programme1"
+            android:exported="true">
+        </activity>
+
 
         <!--
              TODO: Before you run your application, you need a Google Maps API key.
